<resources>
    <string name="app_name">Movies</string>
    <string name="release_date">Date:</string>
    <string name="title_label">Title:</string>
    <string name="rating_label">Rating:</string>
    <string name="plot_label">Plot:</string>
    <string name="favorite_label">Favorite:</string>
    <string name="list_order">List Order</string>
    <string name="popularity_order">Popularity Order</string>
    <string name="ratings_order">Ratings Order</string>
    <string name="favorites_order">Favorites Order</string>
    <string name="no_network">No Available network</string>
    <string name="favorites">Favorites</string>
    <string name="content_authority">com.vaitls.movies.app</string>
    <string name="sync_account_type">com.vaitls.movies.sync</string>
    <string name="genres_label">Genres:</string>
    <string name="reviews">Reviews</string>
    <string name="videos">Videos</string>
    <string name="author_label">Author:</string>
    <string name="url_label">Url:</string>
    <string name="review_label">Review:</string>
    <string name="no_reviews_avail">No reviews available</string>
    <string name="no_trailers_avail">No trailers available</string>
</resources>
