<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_details_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/detail_padding_top"
                    android:textSize="@dimen/detail_title_font_size"
                    android:textStyle="bold"
                    tools:text="Super duper movie title"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingTop="@dimen/detail_padding_top"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/detail_label_pad"
                        android:text="@string/release_date"/>

                    <TextView
                        android:id="@+id/fragment_details_date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="01-01-1970"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/detail_padding_top"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/detail_label_pad"
                        android:text="@string/rating_label"/>

                    <TextView
                        android:id="@+id/fragment_details_rating_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.14159"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_details_favorite_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/favorite_label"/>

                    <ImageButton
                        android:id="@+id/fragment_details_favorite_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_gold_star"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/fragment_details_thubnail_image_view"
                android:layout_width="@dimen/detail_image_width"
                android:layout_height="@dimen/detail_image_height"
                android:layout_weight="1"
                android:paddingLeft="@dimen/detail_image_padding"
                tools:src="@mipmap/ic_launcher"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/genres_label"
            />
        <TextView
            android:id="@+id/fragment_details_genre_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="War, Western, Drama, Black Comedy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/plot_label"
            android:paddingTop="5dp"
            />

        <TextView
            android:id="@+id/fragment_details_plot_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:paddingTop="@dimen/detail_plot_pad_top"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam faucibus elit nectortor varius accumsan. Pellentesque scelerisque arcu at urna varius fermentum. Aenean auctor massa id neque mattis eleifend. Pellentesque posuere dui quam, eu maximus velit"/>
    </LinearLayout>
</ScrollView>